--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "flowbite": "^1.6.5",
-    "flowbite-react": "^0.4.6",
+    "flowbite-react": "^0.4.7",
     "framer-motion": "^10.12.16",
     "next": "13.4.3",
     "postcss": "8.4.23",
@@ -27,6 +27,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9"
   }
 }
