--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "flowbite-react": "^0.4.7",
     "framer-motion": "^10.12.16",
     "next": "13.4.3",
+    "nextjs-sitemap-generator": "^1.3.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
